--- a/packages/github/package.json
+++ b/packages/github/package.json
@@ -16,6 +16,7 @@
     "underscore-contrib": "^0.3.0",
     "highlights": "^1.2.0",
     "diff": "^1.3.0",
-    "atom-space-pen-views": "^2.0.0"
+    "atom-space-pen-views": "^2.0.0",
+    "dom-listener": "0.1.0"
   }
 }
