--- a/packages/settings-view/package.json
+++ b/packages/settings-view/package.json
@@ -16,7 +16,7 @@
     "request": "^2.40",
     "roaster": "^1.1.2",
     "season": "^5.0.2",
-    "semver": "~4.2",
+    "semver": "^4.2",
     "underscore-plus": "^1.0.6"
   },
   "repository": "https://github.com/atom/settings-view",
