--- a/packages/github/package.json
+++ b/packages/github/package.json
@@ -18,5 +18,8 @@
     "diff": "^1.3.0",
     "atom-space-pen-views": "^2.0.0",
     "dom-listener": "0.1.0"
+  },
+  "devDependencies": {
+    "coffeelint": "^1.9.3"
   }
 }
