Implement find-next/previous-selected functionality
Add ability to search for the next and previous occurrence of the
current selection or the word containing the cursor in the absence
of a selection. This behaviour, and associated keybindings, is
identical to that of Sublime Text and Visual Studio, among others.

This change also makes the use-selection-as-find-pattern
command use the word containing the cursor in the absence of a
selection instead of simply clearing the existing search pattern, so
that the behaviour is consistent (and code can be reused internally).

This change implements the enhancement described in issue #210.

--- a/packages/find-and-replace/package.json
+++ b/packages/find-and-replace/package.json
@@ -13,6 +13,8 @@
       "find-and-replace:toggle",
       "find-and-replace:find-next",
       "find-and-replace:find-previous",
+      "find-and-replace:find-next-selected",
+      "find-and-replace:find-previous-selected",
       "find-and-replace:use-selection-as-find-pattern",
       "find-and-replace:show-replace",
       "find-and-replace:replace-next",
