Add License field to package.json

--- a/packages/archive-view/package.json
+++ b/packages/archive-view/package.json
@@ -13,6 +13,7 @@
     "temp": "~0.8.1"
   },
   "repository": "https://github.com/atom/archive-view",
+  "license": "MIT",
   "engines": {
     "atom": "*"
   }
