--- a/packages/language-toml/package.json
+++ b/packages/language-toml/package.json
@@ -3,6 +3,7 @@
   "version": "0.15.0",
   "description": "Syntax highlighting for Tom's Obvious, Minimal Language (TOML).",
   "repository": "https://github.com/atom/language-toml",
+  "license": "MIT",
   "engines": {
     "atom": "*"
   }
