Add License field to package.json

--- a/packages/spell-check/package.json
+++ b/packages/spell-check/package.json
@@ -9,6 +9,7 @@
     "underscore-plus": "^1"
   },
   "repository": "https://github.com/atom/spell-check",
+  "license": "MIT",
   "engines": {
     "atom": "*"
   }
