--- a/packages/tabs/package.json
+++ b/packages/tabs/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "atom-space-pen-views": "^2.0.0",
     "underscore-plus": "1.x"
+  },
+  "devDependencies": {
+    "coffeelint": "^1.9.7"
   }
 }
