--- a/packages/notifications/package.json
+++ b/packages/notifications/package.json
@@ -15,5 +15,8 @@
     "semver": "^4.2.0",
     "stacktrace-parser": "0.1.1",
     "temp": "^0.8.1"
+  },
+  "devDependencies": {
+    "coffeelint": "^1.9.7"
   }
 }
