Add coffeelint support

--- a/packages/whitespace/package.json
+++ b/packages/whitespace/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "fs-plus": "2.x",
     "temp": "~0.8.1"
+  },
+  "devDependencies": {
+    "coffeelint": "^1.9.7"
   }
 }
