Add coffeelint support

--- a/packages/markdown-preview/package.json
+++ b/packages/markdown-preview/package.json
@@ -19,5 +19,8 @@
     "temp": "^0.8.1",
     "underscore-plus": "^1.0.0",
     "wrench": "^1.5.0"
+  },
+  "devDependencies": {
+    "coffeelint": "^1.9.7"
   }
 }
