Add coffeelint support

--- a/packages/package-generator/package.json
+++ b/packages/package-generator/package.json
@@ -19,5 +19,8 @@
   "repository": "https://github.com/atom/package-generator",
   "engines": {
     "atom": "*"
+  },
+  "devDependencies": {
+    "coffeelint": "^1.9.7"
   }
 }
