--- a/packages/settings-view/package.json
+++ b/packages/settings-view/package.json
@@ -12,6 +12,7 @@
     "fs-plus": "^2.4",
     "fuzzaldrin": "^2.1",
     "glob": "4.3.1",
+    "marked": "^0.3.3",
     "q": "^1.1.2",
     "request": "^2.40",
     "roaster": "^1.1.2",
