--- a/packages/tabs/package.json
+++ b/packages/tabs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "atom-space-pen-views": "^2.0.0",
+    "event-kit": "^1.0.0",
     "underscore-plus": "1.x"
   },
   "devDependencies": {
