Add coffeelint support

--- a/packages/language-gfm/package.json
+++ b/packages/language-gfm/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "coffee-script": "1.7.0",
+    "coffeelint": "^1.10.1",
     "request": "^2.34.0",
     "season": "^5.0.2",
     "underscore-plus": "^1.0.6"
