--- a/packages/language-todo/package.json
+++ b/packages/language-todo/package.json
@@ -14,5 +14,8 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/atom/language-todo/issues"
+  },
+  "devDependencies": {
+    "coffeelint": "^1.10.1"
   }
 }
