--- a/packages/tabs/package.json
+++ b/packages/tabs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "atom-space-pen-views": "^2.0.0",
+    "temp": "~0.8.1",
     "underscore-plus": "1.x"
   },
   "devDependencies": {
