--- a/packages/language-make/grammars/makefile.cson
+++ b/packages/language-make/grammars/makefile.cson
@@ -253,7 +253,7 @@
       }
     ]
   'recipe':
-    'begin': '^([^:]*)(:)(?!\\=)'
+    'begin': '^(?!\\t)([^:]*)(:)(?!\\=)'
     'beginCaptures':
       '1':
         'patterns': [
@@ -303,30 +303,6 @@
             'include': '#variables'
           }
         ]
-      }
-      {
-        'begin': '^\\t'
-        'name': 'meta.scope.recipe.makefile'
-        'patterns': [
-          {
-            'captures':
-              '0':
-                'patterns': [
-                  {
-                    'match': '\\\\\\n'
-                    'name': 'constant.character.escape.continuation.makefile'
-                  }
-                  {
-                    'include': '#variables'
-                  }
-                  {
-                    'include': 'source.shell'
-                  }
-                ]
-            'match': '.+\\n?'
-          }
-        ]
-        'while': '^\\t'
       }
     ]
   'variable-assignment':
