--- a/packages/find-and-replace/package.json
+++ b/packages/find-and-replace/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "atom-space-pen-views": "^2.1.0",
+    "binarysearch": "^0.2.4",
     "fs-plus": "2.x",
     "temp": "0.8.1",
     "underscore-plus": "1.x"
