--- a/packages/autosave/package.json
+++ b/packages/autosave/package.json
@@ -8,6 +8,14 @@
   "engines": {
     "atom": ">0.27.0"
   },
+  "providedServices": {
+    "autosave": {
+      "description": "A configuration object to control what is autosaved",
+      "versions": {
+        "0.22.0": "provideControls"
+      }
+    }
+  },
   "dependencies": {
     "fs-plus": "^2.0.0"
   },
