--- a/packages/status-bar/package.json
+++ b/packages/status-bar/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "fs-plus": "^2.0.0",
     "grim": "^1.0.0",
-    "atom-space-pen-views": "^2.0.0"
+    "atom-space-pen-views": "^2.0.0",
+    "underscore-plus": "^1.0.0"
   },
   "providedServices": {
     "status-bar": {
